--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,1 +1,124 @@
-<section class="faq-section">FAQ</section>
+<section class="faq-section">
+  <div class="container faq-section-container">
+    <h2 class="faq-p">FAQ</h2>
+    <ul class="accordion-wrapper faq-wrapper">
+      <li class="ac ac-item faq-item">
+        <h2 class="ac-header">
+          <button type="button" class="ac-trigger ac-trigger-extra">
+            What programming languages are most often used in your project?<span
+              class="faq-toggle-button"
+              ><svg class="faq-icon-up" width="20" height="20">
+                <use href="/img/sprite.svg#icon-Icon-up"></use>
+              </svg>
+            </span>
+          </button>
+        </h2>
+        <div class="ac-panel">
+          <p class="ac-text faq-text-l">
+            In the field of web development, there are various technologies and
+            programming languages. Typically, this includes a combination of
+            frontend (client side) and backend (server side) languages.
+          </p>
+        </div>
+      </li>
+      <li class="ac acx ac-faq-item">
+        <h2 class="ac-header">
+          <button type="button" class="ac-trigger ac-btn-trigger">
+            What are the deadlines for the project?<span
+              class="faq-toggle-button faq-toggle-button-project"
+              ><svg class="faq-icon-up" width="20" height="20">
+                <use href="/img/sprite.svg#icon-Icon-up"></use>
+              </svg>
+            </span>
+          </button>
+        </h2>
+        <div class="ac-panel">
+          <p class="ac-text faq-text-r-extra faq-text-r">
+            The terms of project implementation depend to a large extent on a
+            number of factors, such as the scope of the project, its complexity,
+            and the availability of resources. Determining exact deadlines is a
+            difficult task, and it usually occurs during the planning phase of
+            the project.
+          </p>
+        </div>
+      </li>
+      <li class="ac ac-item faq-item">
+        <h2 class="ac-header">
+          <button type="button" class="ac-trigger">
+            What payment methods do you accept?<span class="faq-toggle-button"
+              ><svg class="faq-icon-up" width="20" height="20">
+                <use href="/img/sprite.svg#icon-Icon-up"></use>
+              </svg>
+            </span>
+          </button>
+        </h2>
+        <div class="ac-panel">
+          <p class="ac-text faq-text-l">
+            Payment through credit and debit cards such as Visa, MasterCard,
+            specialized electronic payment systems such as PayPal, as well as
+            payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+          </p>
+        </div>
+      </li>
+      <li class="ac acx">
+        <h2 class="ac-header">
+          <button type="button" class="ac-trigger">
+            How can I contact you?<span class="faq-toggle-button"
+              ><svg class="faq-icon-up" width="20" height="20">
+                <use href="/img/sprite.svg#icon-Icon-up"></use>
+              </svg>
+            </span>
+          </button>
+        </h2>
+        <div class="ac-panel">
+          <p class="ac-text faq-text-r">
+            In the field of web development, there are various technologies and
+            programming languages. Typically, this includes a combination of
+            frontend (client side) and backend (server side) languages.
+          </p>
+        </div>
+      </li>
+      <li class="ac ac-item">
+        <h2 class="ac-header">
+          <button type="button" class="ac-trigger btn-trigger">
+            Do you provide advice or support?<span
+              class="faq-toggle-button faq-toggle-button-support"
+              ><svg class="faq-icon-up" width="20" height="20">
+                <use href="/img/sprite.svg#icon-Icon-up"></use>
+              </svg>
+            </span>
+          </button>
+        </h2>
+        <div class="ac-panel">
+          <p class="ac-text faq-text-l faq-text-l-extra">
+            The terms of project implementation depend to a large extent on a
+            number of factors, such as the scope of the project, its complexity,
+            and the availability of resources. Determining exact deadlines is a
+            difficult task, and it usually occurs during the planning phase of
+            the project.
+          </p>
+        </div>
+      </li>
+      <li class="ac acx">
+        <h2 class="ac-header">
+          <button type="button" class="ac-trigger">
+            What does the process of developing a software product look like
+            from idea to implementation?<span
+              class="faq-toggle-button faq-toggle-button-extra"
+              ><svg class="faq-icon-up" width="20" height="20">
+                <use href="/img/sprite.svg#icon-Icon-up"></use>
+              </svg>
+            </span>
+          </button>
+        </h2>
+        <div class="ac-panel">
+          <p class="ac-text faq-text-r">
+            Payment through credit and debit cards such as Visa, MasterCard,
+            specialized electronic payment systems such as PayPal, as well as
+            payments in cryptocurrencies such as Bitcoin, Ethereum and others.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
