--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,6 +1,6 @@
 <section class="about-me" id="about-me">
   <div class="about-me-container container">
-    <h2 class="about-me-title visually-hidden"></h2>
+    <h2 class="about-me-title visually-hidden">About me</h2>
     <div class="about-me-media">
       <div class="about-me-media__content">
         <div class="about-me-media__title">
