--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,1 +1,465 @@
-<section class="covers-section">Covers</section>
+<section class="covers" id="covers">
+  <h2 class="covers-title visually-hidden">Gallery of Covers</h2>
+  <div class="covers-container container">
+    <div class="covers-wrapper">
+      <ul class="covers-list">
+        <li class="covers-item first">
+          <img
+            src="./img/covers/body_shape.jpg"
+            srcset="
+              /img/covers/body_shape.jpg    1x,
+              /img/covers/body_shape@2x.jpg 2x
+            "
+            alt="Body Shape"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/english.jpg"
+            srcset="/img/covers/english.jpg 1x, /img/covers/english@2x.jpg 2x"
+            alt="English"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/finances.jpg"
+            srcset="/img/covers/finances.jpg 1x, /img/covers/finances@2x.jpg 2x"
+            alt="Finances"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/forms_and_nature.jpg"
+            srcset="
+              /img/covers/forms_and_nature.jpg    1x,
+              /img/covers/forms_and_nature@2x.jpg 2x
+            "
+            alt="Forms and Nature"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/fruits_basket.jpg"
+            srcset="
+              /img/covers/fruits_basket.jpg    1x,
+              /img/covers/fruits_basket@2x.jpg 2x
+            "
+            alt="Fruits Basket"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/mimino.jpg"
+            srcset="/img/covers/mimino.jpg 1x, /img/covers/mimino@2x.jpg 2x"
+            alt="Mimino"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/online_business.jpg"
+            srcset="
+              /img/covers/online_business.jpg    1x,
+              /img/covers/online_business@2x.jpg 2x
+            "
+            alt="Online Business"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/organic.jpg"
+            srcset="/img/covers/organic.jpg 1x, /img/covers/organic@2x.jpg 2x"
+            alt="Organic"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/power_pulse.jpg"
+            srcset="
+              /img/covers/power_pulse.jpg    1x,
+              /img/covers/power_pulse@2x.jpg 2x
+            "
+            alt="Power Pulse"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/ukrainian.jpg"
+            srcset="
+              /img/covers/ukrainian.jpg    1x,
+              /img/covers/ukrainian@2x.jpg 2x
+            "
+            alt="Ukrainian"
+            width="544"
+            height="314"
+          />
+        </li>
+
+        <!--  phill_masslo -->
+
+        <li class="covers-item second">
+          <img
+            src="/img/covers/finances.jpg"
+            srcset="/img/covers/finances.jpg 1x, /img/covers/finances@2x.jpg 2x"
+            alt="Finances"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/forms_and_nature.jpg"
+            srcset="
+              /img/covers/forms_and_nature.jpg    1x,
+              /img/covers/forms_and_nature@2x.jpg 2x
+            "
+            alt="Forms and Nature"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/fruits_basket.jpg"
+            srcset="
+              /img/covers/fruits_basket.jpg    1x,
+              /img/covers/fruits_basket@2x.jpg 2x
+            "
+            alt="Fruits Basket"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/mimino.jpg"
+            srcset="/img/covers/mimino.jpg 1x, /img/covers/mimino@2x.jpg 2x"
+            alt="Mimino"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/online_business.jpg"
+            srcset="
+              /img/covers/online_business.jpg    1x,
+              /img/covers/online_business@2x.jpg 2x
+            "
+            alt="Online Business"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/organic.jpg"
+            srcset="/img/covers/organic.jpg 1x, /img/covers/organic@2x.jpg 2x"
+            alt="Organic"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/power_pulse.jpg"
+            srcset="
+              /img/covers/power_pulse.jpg    1x,
+              /img/covers/power_pulse@2x.jpg 2x
+            "
+            alt="Power Pulse"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/ukrainian.jpg"
+            srcset="
+              /img/covers/ukrainian.jpg    1x,
+              /img/covers/ukrainian@2x.jpg 2x
+            "
+            alt="Ukrainian"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/body_shape.jpg"
+            srcset="
+              /img/covers/body_shape.jpg    1x,
+              /img/covers/body_shape@2x.jpg 2x
+            "
+            alt="Body Shape"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/english.jpg"
+            srcset="/img/covers/english.jpg 1x, /img/covers/english@2x.jpg 2x"
+            alt="English"
+            width="544"
+            height="314"
+          />
+        </li>
+
+        <li class="covers-item third">
+          <img
+            src="/img/covers/fruits_basket.jpg"
+            srcset="
+              /img/covers/fruits_basket.jpg    1x,
+              /img/covers/fruits_basket@2x.jpg 2x
+            "
+            alt="Fruits Basket"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/mimino.jpg"
+            srcset="/img/covers/mimino.jpg 1x, /img/covers/mimino@2x.jpg 2x"
+            alt="Mimino"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/online_business.jpg"
+            srcset="
+              /img/covers/online_business.jpg    1x,
+              /img/covers/online_business@2x.jpg 2x
+            "
+            alt="Online Business"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/organic.jpg"
+            srcset="/img/covers/organic.jpg 1x, /img/covers/organic@2x.jpg 2x"
+            alt="Organic"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/power_pulse.jpg"
+            srcset="
+              /img/covers/power_pulse.jpg    1x,
+              /img/covers/power_pulse@2x.jpg 2x
+            "
+            alt="Power Pulse"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/ukrainian.jpg"
+            srcset="
+              /img/covers/ukrainian.jpg    1x,
+              /img/covers/ukrainian@2x.jpg 2x
+            "
+            alt="Ukrainian"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/body_shape.jpg"
+            srcset="
+              /img/covers/body_shape.jpg    1x,
+              /img/covers/body_shape@2x.jpg 2x
+            "
+            alt="Body Shape"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/english.jpg"
+            srcset="/img/covers/english.jpg 1x, /img/covers/english@2x.jpg 2x"
+            alt="English"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/finances.jpg"
+            srcset="/img/covers/finances.jpg 1x, /img/covers/finances@2x.jpg 2x"
+            alt="Finances"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/forms_and_nature.jpg"
+            srcset="
+              /img/covers/forms_and_nature.jpg    1x,
+              /img/covers/forms_and_nature@2x.jpg 2x
+            "
+            alt="Forms and Nature"
+            width="544"
+            height="314"
+          />
+        </li>
+
+        <li class="covers-item fourth">
+          <img
+            src="/img/covers/organic.jpg"
+            srcset="/img/covers/organic.jpg 1x, /img/covers/organic@2x.jpg 2x"
+            alt="Organic"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/power_pulse.jpg"
+            srcset="
+              /img/covers/power_pulse.jpg    1x,
+              /img/covers/power_pulse@2x.jpg 2x
+            "
+            alt="Power Pulse"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/ukrainian.jpg"
+            srcset="
+              /img/covers/ukrainian.jpg    1x,
+              /img/covers/ukrainian@2x.jpg 2x
+            "
+            alt="Ukrainian"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/body_shape.jpg"
+            srcset="
+              /img/covers/body_shape.jpg    1x,
+              /img/covers/body_shape@2x.jpg 2x
+            "
+            alt="Body Shape"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/english.jpg"
+            srcset="/img/covers/english.jpg 1x, /img/covers/english@2x.jpg 2x"
+            alt="English"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/finances.jpg"
+            srcset="/img/covers/finances.jpg 1x, /img/covers/finances@2x.jpg 2x"
+            alt="Finances"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/forms_and_nature.jpg"
+            srcset="
+              /img/covers/forms_and_nature.jpg    1x,
+              /img/covers/forms_and_nature@2x.jpg 2x
+            "
+            alt="Forms and Nature"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/fruits_basket.jpg"
+            srcset="
+              /img/covers/fruits_basket.jpg    1x,
+              /img/covers/fruits_basket@2x.jpg 2x
+            "
+            alt="Fruits Basket"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/mimino.jpg"
+            srcset="/img/covers/mimino.jpg 1x, /img/covers/mimino@2x.jpg 2x"
+            alt="Mimino"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/online_business.jpg"
+            srcset="
+              /img/covers/online_business.jpg    1x,
+              /img/covers/online_business@2x.jpg 2x
+            "
+            alt="Online Business"
+            width="544"
+            height="314"
+          />
+        </li>
+
+        <li class="covers-item fifth">
+          <img
+            src="/img/covers/forms_and_nature.jpg"
+            srcset="
+              /img/covers/forms_and_nature.jpg    1x,
+              /img/covers/forms_and_nature@2x.jpg 2x
+            "
+            alt="Forms and Nature"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/fruits_basket.jpg"
+            srcset="
+              /img/covers/fruits_basket.jpg    1x,
+              /img/covers/fruits_basket@2x.jpg 2x
+            "
+            alt="Fruits Basket"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/mimino.jpg"
+            srcset="/img/covers/mimino.jpg 1x, /img/covers/mimino@2x.jpg 2x"
+            alt="Mimino"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/online_business.jpg"
+            srcset="
+              /img/covers/online_business.jpg    1x,
+              /img/covers/online_business@2x.jpg 2x
+            "
+            alt="Online Business"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/organic.jpg"
+            srcset="/img/covers/organic.jpg 1x, /img/covers/organic@2x.jpg 2x"
+            alt="Organic"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/power_pulse.jpg"
+            srcset="
+              /img/covers/power_pulse.jpg    1x,
+              /img/covers/power_pulse@2x.jpg 2x
+            "
+            alt="Power Pulse"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/ukrainian.jpg"
+            srcset="
+              /img/covers/ukrainian.jpg    1x,
+              /img/covers/ukrainian@2x.jpg 2x
+            "
+            alt="Ukrainian"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/body_shape.jpg"
+            srcset="
+              /img/covers/body_shape.jpg    1x,
+              /img/covers/body_shape@2x.jpg 2x
+            "
+            alt="Body Shape"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/english.jpg"
+            srcset="/img/covers/english.jpg 1x, /img/covers/english@2x.jpg 2x"
+            alt="English"
+            width="544"
+            height="314"
+          />
+          <img
+            src="/img/covers/finances.jpg"
+            srcset="/img/covers/finances.jpg 1x, /img/covers/finances@2x.jpg 2x"
+            alt="Finances"
+            width="544"
+            height="314"
+          />
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
