--- a/src/partials/work-together.html
+++ b/src/partials/work-together.html
@@ -1,1 +1,98 @@
-<section class="work-together-section">Work together</section>
+<section class="work-together" id="work-together">
+  <div class="work-together-section container">
+    <div class="work-together-container">
+      <div class="work-together-top">
+        <div class="work-together-logo-container">
+          <picture>
+            <source
+              srcset="
+                /img/work-together/work-together-logo-tab-@1x.jpg 1x,
+                /img/work-together/work-together-logo-tab-@2x.jpg 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                /img/work-together/work-together-logo-mob-@1x.jpg 1x,
+                /img/work-together/work-together-logo-mob-@2x.jpg 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              src="/img/work-together/work-together-logo-mob-@1x.jpg"
+              alt="Work-together-logo"
+              width="40"
+              height="40"
+              class="work-together-logo"
+            />
+          </picture>
+        </div>
+        <h2 class="work-together-heading">
+          Let’s <span class="work-together-heading-accent">work</span>
+        </h2>
+      </div>
+      <h2 class="work-together-heading work-together-bottom">together</h2>
+    </div>
+
+    <div class="work-together-field-container">
+      <form class="work-together-form">
+        <div class="work-together-form-container">
+          <div class="work-together-contact-field">
+            <input
+              type="text"
+              name="user-email"
+              id="user-email"
+              required
+              placeholder="clients@gmail.com"
+              class="work-together-input"
+            />
+          </div>
+          <div class="work-together-contact-field">
+            <input
+              type="text"
+              name="user-comment"
+              id="user-comment"
+              required
+              placeholder="comments"
+              class="work-together-input"
+            />
+          </div>
+          <button type="submit" class="work-together-btn">Send</button>
+        </div>
+      </form>
+    </div>
+
+    <address class="work-together-contacts">
+      <ul class="work-together-contacts-list">
+        <li class="work-together-contacts-item">
+          <a
+            class="work-together-contacts-link"
+            href="mailto:lloydjefferson@gmail.com"
+          >
+            lloydjefferson@gmail.com
+          </a>
+        </li>
+        <li class="work-together-contacts-item">
+          <a class="work-together-contacts-link" href="tel:+3801111111111">
+            +380 11 1111 11 11
+          </a>
+        </li>
+      </ul>
+    </address>
+  </div>
+
+  <div class="backdrop">
+    <div class="modal">
+      <button type="button" class="close-btn">
+        <svg class="icon-close" width="22" height="22">
+          <use href="/img/sprite.svg#icon-close-btn"></use>
+        </svg>
+      </button>
+      <h2 class="modal-heading">Thank you for your interest in cooperation!</h2>
+      <p class="modal-descr">
+        The manager will contact you shortly to discuss further details and
+        opportunities for cooperation. Please stay in touch.
+      </p>
+    </div>
+  </div>
+</section>
