--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,4 +1,4 @@
-<section class="faq-section">
+<section class="faq-section" id="faq">
   <div class="container faq-section-container">
     <h2 class="faq-p">FAQ</h2>
     <ul class="accordion-wrapper faq-wrapper">
