--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="page-header">
   <div class="container wrapper">
-    <div class="header__logo">
+    <a class="header__logo" href="/index.html">
       <img
         src="/img/header/image-logo-1x-min.jpg"
         srcset="
@@ -13,7 +13,7 @@
         height="80"
       />
       <span class="header__logo-text">jefferson*</span>
-    </div>
+    </a>
 
     <button class="burger-menu" id="burger-menu">
       <svg class="burger-menu__icon" width="28" height="28">
