--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,4 +1,4 @@
-<section class="project-section">
+<section class="project-section" id="projects">
   <div class="container project-main-container">
     <h2 class="project-main-title">Projects</h2>
     <div class="swiper-container">
